--- a/constants.gradle
+++ b/constants.gradle
@@ -13,7 +13,7 @@
 // limitations under the License.
 project.ext {
     // ExoPlayer version and version code.
-    releaseVersion = '2.18.6'
+    releaseVersion = '2.18.6-1'
     releaseVersionCode = 2_018_006
     minSdkVersion = 16
     appTargetSdkVersion = 33
