--- a/publish.gradle
+++ b/publish.gradle
@@ -18,7 +18,7 @@ apply from: "$gradle.ext.exoplayerSettingsDir/missing_aar_type_workaround.gradle
 ext {
     NEXUS_USER = ''
     NEXUS_PASSWORD = ''
-    RELEASE_SNAPSHOT = true
+    RELEASE_SNAPSHOT = false
 
     POM_URL_SNAP = 'https://www.raoyunsoft.com/nexus/repository/maven-snapshots/'
     POM_URL = 'https://www.raoyunsoft.com/nexus/repository/maven-releases/'
