--- a/build.gradle
+++ b/build.gradle
@@ -15,6 +15,7 @@ buildscript {
     repositories {
         google()
         mavenCentral()
+        maven { url "https://jcenter.bintray.com/" }
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:4.2.2'
@@ -26,6 +27,7 @@ allprojects {
     repositories {
         google()
         mavenCentral()
+        maven { url "https://jcenter.bintray.com/" }
         maven { url "https://www.raoyunsoft.com/nexus/repository/maven-releases/" }
         maven { url "https://www.raoyunsoft.com/nexus/repository/maven-snapshots/" }
     }
